--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,27 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(oogabooga VERSION 0.1.0)
 cmake_policy(SET CMP0072 NEW)
-find_package(OpenGL REQUIRED)
 
-# --- Gather common/shared source files (exclude main files and vendor) ---
+# --- C++ Standard ---
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# --- Dependencies ---
+find_package(OpenGL REQUIRED)
+find_package(glfw3 REQUIRED)
+
+# --- Global include directory ---
+include_directories(src)
+
+# --- Gather shared/common sources ---
 file(GLOB_RECURSE COMMON_SOURCES "src/*.cpp" "src/*.c")
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/vendor/.*")
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/glad/.*")
+list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/testprograms/.*")
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/main.cpp")
-list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/testprograms/triangle.cpp")
-list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/testprograms/hello_triangle_indexed.cpp")
-list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/testprograms/triangle_colorgradient.cpp")
-list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/testprograms/test.cpp")
 
-# --- Add vendor code as separate libraries ---
+# --- Vendor libraries ---
 add_library(glad src/glad/glad.c)
 target_include_directories(glad PUBLIC src)
 target_include_directories(glad SYSTEM PRIVATE src/glad)
@@ -22,13 +30,17 @@ add_library(stb_image src/vendor/stb_image/stb_image.cpp)
 target_include_directories(stb_image PUBLIC src)
 target_include_directories(stb_image SYSTEM PRIVATE src/vendor/stb_image)
 
-# --- Function to create an executable with standard configuration ---
+# --- Common static library (compiled once) ---
+add_library(oogabooga_common STATIC ${COMMON_SOURCES})
+target_include_directories(oogabooga_common PUBLIC src)
+target_link_libraries(oogabooga_common PUBLIC glad stb_image glfw OpenGL::GL)
+
+# --- Function for building executables ---
 function(add_gl_executable TARGET_NAME SOURCE_FILE)
-    add_executable(${TARGET_NAME} ${SOURCE_FILE} ${COMMON_SOURCES})
-    target_include_directories(${TARGET_NAME} PRIVATE src)
-    target_link_libraries(${TARGET_NAME} PRIVATE glad stb_image glfw OpenGL::GL)
-    
-    # Add warnings for your own code
+    add_executable(${TARGET_NAME} ${SOURCE_FILE})
+    target_link_libraries(${TARGET_NAME} PRIVATE oogabooga_common)
+
+    # Compiler warnings
     if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
         target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wpedantic -Wshadow)
     elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
@@ -36,9 +48,14 @@ function(add_gl_executable TARGET_NAME SOURCE_FILE)
     endif()
 endfunction()
 
-# --- Build executables ---
-# add_gl_executable(oogabooga src/main.cpp)
-# add_gl_executable(triangle src/testprograms/triangle.cpp)
-# add_gl_executable(hello_triangle_indexed src/testprograms/hello_triangle_indexed.cpp)
-# add_gl_executable(triangle_colorgradient src/testprograms/triangle_colorgradient.cpp)
-add_gl_executable(test src/testprograms/test.cpp)
+# --- Automatically add all test programs ---
+file(GLOB TEST_PROGRAMS "src/testprograms/*.cpp")
+foreach(TEST_SRC ${TEST_PROGRAMS})
+    get_filename_component(TEST_NAME ${TEST_SRC} NAME_WE)
+    add_gl_executable(${TEST_NAME} ${TEST_SRC})
+endforeach()
+
+add_gl_executable(oogabooga src/main.cpp)
+
+# --- (Optional) Install rule ---
+# install(TARGETS oogabooga_common RUNTIME DESTINATION bin)
