added damage sound effect for cows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ if(WIN32)
 endif()
 
 # GLM is header-only - include from vendor directory (works on all platforms)
-include_directories(vendor/ )
+# include_directories(vendor/ )
 
 # --- Global include directory ---
 include_directories(src)
@@ -75,15 +75,57 @@ if(WIN32)
 else()
     set(ASSIMP_BUILD_ZLIB OFF CACHE BOOL "" FORCE)
 endif()
-set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_FBX_IMPORTER ON CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_GLTF_IMPORTER ON CACHE BOOL "" FORCE)
+
+# --- Assimp ---
+set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_FBX_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_GLTF_IMPORTER OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_COLLADA_IMPORTER OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_3DS_IMPORTER OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_STL_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_PLY_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_BLEND_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_DXF_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_LWO_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_MD2_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_MD3_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_MD5_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_X_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_SMD_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_IQM_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_AMF_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_STEP_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_IRR_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_NFF_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_OFF_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_Q3D_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_Q3BSP_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_RAW_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_SIB_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_TERRAGEN_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_CSM_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_3MF_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_MMD_IMPORTER OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(src/vendor/assimp)
 target_link_libraries(oogabooga_common PUBLIC assimp)
+
+# OpenAL Soft config
+set(ALSOFT_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(ALSOFT_UTILS OFF CACHE BOOL "" FORCE)
+set(ALSOFT_TESTS OFF CACHE BOOL "" FORCE)
+
+set(ALSOFT_BACKEND_ALSA ON CACHE BOOL "" FORCE)
+set(ALSOFT_BACKEND_PULSEAUDIO ON CACHE BOOL "" FORCE)
+set(ALSOFT_BACKEND_PIPEWIRE ON CACHE BOOL "" FORCE)
+
+set(ALSOFT_BACKEND_WASAPI ON CACHE BOOL "" FORCE)
+set(ALSOFT_BACKEND_WINMM OFF CACHE BOOL "" FORCE)
+
+set(ALSOFT_BACKEND_COREAUDIO ON CACHE BOOL "" FORCE)
+add_subdirectory(src/vendor/openal-soft)
+target_link_libraries(oogabooga_common PUBLIC OpenAL)
 
 # --- Function for building executables ---
 function(add_gl_executable TARGET_NAME SOURCE_FILE)
