--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,42 +32,47 @@ if(WIN32)
         IMPORTED_IMPLIB "${GLFW_DIR}/lib-vc2022/glfw3dll.lib"
         INTERFACE_INCLUDE_DIRECTORIES "${GLFW_DIR}/include"
     )
-    else()
+else()
     # Linux: use system packages
     find_package(glfw3 REQUIRED)
 endif()
-
-# GLM is header-only - include from vendor directory (works on all platforms)
-# include_directories(vendor/ )
 
 # --- Global include directory ---
 include_directories(src)
 
 # --- Gather shared/common sources ---
 file(GLOB_RECURSE COMMON_SOURCES "src/*.cpp" "src/*.c" "src/*/*.cpp" "src/*/*.c")
+# Exclude vendor and main files from the common lib
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/vendor/.*")
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/glad/.*")
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/testprograms/.*")
 list(FILTER COMMON_SOURCES EXCLUDE REGEX "src/main.cpp")
 
 # --- Vendor libraries ---
+
+# 1. GLAD
 add_library(glad STATIC src/glad/glad.c)
 target_include_directories(glad PUBLIC src)
 target_include_directories(glad SYSTEM PRIVATE src/glad)
 
+# 2. STB Image
 add_library(stb_image STATIC src/vendor/stb_image/stb_image.cpp)
 target_include_directories(stb_image PUBLIC src)
 target_include_directories(stb_image SYSTEM PRIVATE src/vendor/stb_image)
 
-
+# 3. HTTP Lib (With OpenSSL Support)
 find_package(OpenSSL REQUIRED)
 add_library(httplib STATIC src/vendor/httplib/httplib.cpp)
+
+# This enables the SSL code inside httplib.h
 target_compile_definitions(httplib PUBLIC CPPHTTPLIB_OPENSSL_SUPPORT)
+
 target_include_directories(httplib
-    PUBLIC
-        ${PROJECT_SOURCE_DIR}/src/vendor/httplib
+    PUBLIC ${PROJECT_SOURCE_DIR}/src/vendor/httplib
 )
+# Link OpenSSL libraries to httplib
 target_link_libraries(httplib PUBLIC OpenSSL::SSL OpenSSL::Crypto)
+
 
 # --- Common static library (compiled once) ---
 add_library(oogabooga_common STATIC ${COMMON_SOURCES})
@@ -83,7 +88,7 @@ target_link_libraries(oogabooga_common PUBLIC
 )
 
 
-# --- Assimp ---
+# --- Assimp Configuration ---
 set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
@@ -91,48 +96,23 @@ set(ASSIMP_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE)
 set(ASSIMP_WARNINGS_AS_ERRORS OFF CACHE BOOL "" FORCE)
 set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
+
 if(WIN32)
     set(ASSIMP_BUILD_ZLIB ON CACHE BOOL "" FORCE)
 else()
     set(ASSIMP_BUILD_ZLIB OFF CACHE BOOL "" FORCE)
 endif()
 
-# --- Assimp ---
+# Disable specific Assimp importers to speed up build
 set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_FBX_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_GLTF_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_COLLADA_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_3DS_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_STL_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_PLY_IMPORTER OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_BLEND_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_DXF_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_LWO_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_MD2_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_MD3_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_MD5_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_X_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_SMD_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_IQM_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_AMF_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_STEP_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_IRR_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_NFF_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_OFF_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_Q3D_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_Q3BSP_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_RAW_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_SIB_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_TERRAGEN_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_CSM_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_3MF_IMPORTER OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_MMD_IMPORTER OFF CACHE BOOL "" FORCE)
+# (All other importers default to OFF because of the line above)
 
 add_subdirectory(src/vendor/assimp)
 target_link_libraries(oogabooga_common PUBLIC assimp)
 
-# OpenAL - Platform-specific configuration
+
+# --- OpenAL Configuration ---
 if(APPLE)
     # OpenAL (from Homebrew - explicit paths to avoid macOS system OpenAL)
     set(OPENAL_INCLUDE_DIR "/usr/local/opt/openal-soft/include")
@@ -144,18 +124,18 @@ else()
     set(ALSOFT_EXAMPLES OFF CACHE BOOL "" FORCE)
     set(ALSOFT_UTILS OFF CACHE BOOL "" FORCE)
     set(ALSOFT_TESTS OFF CACHE BOOL "" FORCE)
-
     set(ALSOFT_BACKEND_ALSA ON CACHE BOOL "" FORCE)
     set(ALSOFT_BACKEND_PULSEAUDIO ON CACHE BOOL "" FORCE)
     set(ALSOFT_BACKEND_PIPEWIRE ON CACHE BOOL "" FORCE)
-
     set(ALSOFT_BACKEND_WASAPI ON CACHE BOOL "" FORCE)
     set(ALSOFT_BACKEND_WINMM OFF CACHE BOOL "" FORCE)
-
     set(ALSOFT_BACKEND_COREAUDIO ON CACHE BOOL "" FORCE)
+    set(ALSOFT_STL_HARDENING OFF CACHE BOOL "" FORCE)
+
     add_subdirectory(src/vendor/openal-soft)
     target_link_libraries(oogabooga_common PUBLIC OpenAL)
 endif()
+
 
 # --- Function for building executables ---
 function(add_gl_executable TARGET_NAME SOURCE_FILE)
@@ -170,14 +150,73 @@ function(add_gl_executable TARGET_NAME SOURCE_FILE)
     endif()
     
     # Post-build: copy DLLs on Windows
+    # I split these into separate commands so if one fails (e.g. static lib), it's clearer
+    # Post-build: copy DLLs on Windows    
     if(WIN32)
+        # 1. Copy GLFW
         add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
             "${GLFW_DIR}/lib-vc2022/glfw3.dll"
             $<TARGET_FILE_DIR:${TARGET_NAME}>
-            $<TARGET_FILE:assimp>
-            $<TARGET_FILE_DIR:${TARGET_NAME}>
-        )    
+            COMMENT "Copying GLFW DLL..."
+        )
+        
+        # 2. Copy Assimp (only if it is a shared library)
+        if(TARGET assimp)
+            get_target_property(ASSIMP_TYPE assimp TYPE)
+            if(ASSIMP_TYPE STREQUAL "SHARED_LIBRARY")
+                add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
+                    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                    $<TARGET_FILE:assimp>
+                    $<TARGET_FILE_DIR:${TARGET_NAME}>
+                    COMMENT "Copying Assimp DLL..."
+                )
+            endif()
+        endif()
+
+        # 3. Copy OpenAL (only if it is a shared library)
+        # Note: The target name is "OpenAL" based on your add_subdirectory
+        if(TARGET OpenAL)
+            get_target_property(OPENAL_TYPE OpenAL TYPE)
+            if(OPENAL_TYPE STREQUAL "SHARED_LIBRARY")
+                add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
+                    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                    $<TARGET_FILE:OpenAL>
+                    $<TARGET_FILE_DIR:${TARGET_NAME}>
+                    COMMENT "Copying OpenAL DLL..."
+                )
+            endif()
+        endif()
+
+        # 4. Copy OpenSSL DLLs
+        if(OPENSSL_FOUND)
+            # Hardcoded path is safer for Windows installers
+            set(OPENSSL_BIN_DIR "C:/Program Files/OpenSSL-Win64/bin")
+            
+            file(GLOB OPENSSL_DLLS "${OPENSSL_BIN_DIR}/*.dll")
+
+            if(OPENSSL_DLLS)
+                add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
+                    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                    ${OPENSSL_DLLS}
+                    $<TARGET_FILE_DIR:${TARGET_NAME}>
+                    COMMENT "Copying OpenSSL DLLs..."
+                )
+            else()
+                # Fallback: Try to find them relative to the library if the hardcoded path fails
+                get_filename_component(OPENSSL_LIB_DIR "${OPENSSL_SSL_LIBRARY}" DIRECTORY)
+                # Walk up 4 directories from /lib/VC/x64/MD/ to get to root, then /bin
+                file(GLOB OPENSSL_DLLS_FALLBACK "${OPENSSL_LIB_DIR}/../../../../bin/*.dll")
+                if(OPENSSL_DLLS_FALLBACK)
+                     add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
+                        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                        ${OPENSSL_DLLS_FALLBACK}
+                        $<TARGET_FILE_DIR:${TARGET_NAME}>
+                        COMMENT "Copying OpenSSL DLLs (Fallback)..."
+                    )
+                endif()
+            endif()
+        endif()
     endif()
 
 endfunction()
